welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:4: error: not found: value n
    if (n==2){
        ^redTicket:9: error: value =! is not a member of Int
  }else if (a=!b & a=!c){
             ^redTicket:9: error: value =! is not a member of Int
  }else if (a=!b & a=!c){
                    ^